--- a/nodeJs_ZendVN/mod1/view/about.html
+++ b/nodeJs_ZendVN/mod1/view/about.html
@@ -19,6 +19,15 @@
         h2 {
             text-align: center;
         }
+        .btnClick {
+            background-color: rgb(64, 64, 255);
+            text-decoration: none;
+            color: #fff;
+            padding: 5px;
+        }
+        .btnClick:hover {
+            background-color: blue;
+        }
     </style>
 
 </head>
@@ -26,5 +35,6 @@
     <h1 class="header"></h1>
     <hr>
     <h2> My About</h2>
+    <a href="/" class="btnClick">Home</a>
 </body>
 </html>
