--- a/AppChat_KhoaPham/server/public/trangchu.ejs
+++ b/AppChat_KhoaPham/server/public/trangchu.ejs
@@ -12,7 +12,19 @@
 
 <body>
     hello
+
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <script>
+
+        // goi len server
+        let socket = io('http://localhost:8000');
+
+        $(document).ready(function () {
+            // alert('hello'); 
+
+        })
+    </script>
 </body>
 
 </html>
-
