demo heroku: finish server

--- a/App-socket-heroku/views/home.ejs
+++ b/App-socket-heroku/views/home.ejs
@@ -16,7 +16,7 @@
             <input type="tel" value="0159357001" name="phone" id="txtPhone" placeholder="Phone ...">
             <input type="button" value="Register" id="btnRegister">
         </div>
-        <div id="listUser">
+        <div id="list">
             <h3>Danh sách học viên</h3>
 
             <div id="listUser">
